chore: update README with API endpoints and LICENSE to Elastic-2.0

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "type": "git",
     "url": "https://github.com/LicenseChain/LicenseChain-Luau-SDK.git"
   },
-  "homepage": "https://licensechain.com",
+  "homepage": "https://licensechain.app",
   "bugs": {
     "url": "https://github.com/LicenseChain/LicenseChain-Luau-SDK/issues"
   },
